syntax = "proto3";

package rates;

option go_package = ".";

service RateService {
  rpc GetRates (RateRequest) returns (RateResponse);
}

message RateRequest {
  string marketID = 1;
}

message RateResponse {
  int64 timestamp = 1;
  string ask = 2;
  string bid = 3;
}